# cc65

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  install_target_symlinks.cmake
src/ca65/: main.c
